Mon Aug 30 07:32:41 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_.executable_p): Pathname#.executable?
	  translated from pathname.rb.

Sun Aug 29 23:54:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parser/ruby.rb (RDoc#parse_call_parameters): don't
	  include assignment.  [Bug #3759], [ruby-dev:42154]

	* lib/rdoc/parser/ruby.rb (RDoc#parse_class): ignore non-constant
	  name signleton class.  [Bug #3759], [ruby-dev:42154]

Sun Aug 29 23:25:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_get_path_check): clarify error message for
	  ASCII-incompatible path name.

Sun Aug 29 16:02:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (node_name.inc): remove command option -n and give
	  file as stdin, because IronRuby 1.1 still doesn't support it.
	  So now we can use ir.exe as BASERUBY.

	* tool/node_name.rb: read stdin with while gets.

Sun Aug 29 13:22:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_method_id_and_class): curried proc has no
	  method.  [ruby-core:31871]

Sun Aug 29 12:51:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_provide_feature): clarify error message for frozen
	  $LOADED_FEATURES.  based on a patch from Run Paint Run Run at
	  [ruby-core:31913].

Sun Aug 29 12:19:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (load_failed): should honor encoding.  [ruby-core:31915]

Sun Aug 29 09:35:10 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (clean): exclude *.inc. [ruby-dev:41931]

	* common.mk (distclean): include *.inc.

	* common.mk (help): change description about clean and distclean.

Sat Aug 29 06:34:52 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_chardev_p): Pathname#chardev?
	  translated from pathname.rb.

Sat Aug 28 17:39:33 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_save_exception_mode,
	  BigDecimal_save_rounding_mode, BigDecimal_save_limit): added.
