@@ -1,3 +1,13 @@
+Mon Aug 30 15:00:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (tr_setup_table): initialize negating table when
+	  negating string is given. [ruby-core:31851]
+
+	* string.c (tr_find): add a sentence for the time when
+	  target characters include negating one.
+
+	* string.c (rb_str_count): move definition.
+
 Mon Aug 30 07:32:41 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (path_.executable_p): Pathname#.executable?
